SKY2-841. Added stream session likes
